# autometrics-py

examples/fastapi-example/: main.py  pyproject.toml
